<resources>
    <string name="app_name">ETON DSPcontrol</string>
    <string name="app_version">App Version:</string>
    <string name="mcu_version">Mcu Version:</string>
    <string name="home">HOME</string>
    <string name="mode">MODE</string>
    <string name="connect">CONNECT</string>
    <string name="tune">TUNING</string>
    <string name="setup">SETUP</string>
    <string name="main_level">Main level</string>
    <string name="sub_level">SUB level</string>
    <string name="analog">ANALOG</string>
    <string name="spdif">SPDIF</string>
    <string name="spdif_out">Spdif Out</string>
    <string name="streaming">STREAMING</string>
    <string name="input_level">Input Level</string>
    <string name="advanced_tuning">Advanced tuning</string>
    <string name="analog12">Analog 1+2</string>
    <string name="analog34">Analog 3+4</string>
    <string name="analog56">Analog 5+6</string>
    <string name="digitalLR">Digital L+R</string>
    <string name="output_setting">Output Setting</string>
    <string name="input_setting">Input Setting</string>
    <string name="manager_preset">Manager Preset</string>
    <string name="preferences">Preferences</string>
    <string name="update">Update</string>
    <string name="setup_wizard">Setup Wizard</string>
    <string name="ok">OK</string>
    <string name="external_remote_control">External remote control</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="max_input_level">MAX input level</string>
    <string name="max_output_level">MAX output level</string>
    <string name="remote_led_setting">Remote Led Setting</string>
    <string name="device_preset">Device memory :</string>
    <string name="ch_eq">CH EQ :</string>
    <string name="in_eq">in EQ :</string>
    <string name="ch_level">CH Level :</string>
    <string name="ch_delay">CH Delay :</string>
    <string name="crossover">Crossover :</string>
    <string name="data_download">Data download from cellphone</string>
    <string name="data_save">Data save to cellphone</string>
    <string name="hint_select_placement">Please first select the speaker placement area</string>
    <string name="analog_input">Analog Input</string>
    <string name="digital_input">Digital Input</string>
    <string name="streaming_input">Streaming Input</string>
    <string name="output">Output</string>
    <string name="back">Back</string>
    <string name="next">OK</string>
    <string name="tab_ch_level">CH Level</string>
    <string name="tab_ch_delay">CH Delay</string>
    <string name="tab_crossover">Crossover</string>
    <string name="tab_eq">EQ</string>
    <string name="tab_rta">RTA</string>
    <string name="mute">Mute</string>
    <string name="delay">Delay</string>
    <string name="phase">Phase 180</string>
    <string name="distance">Distance</string>
    <string name="input">Input</string>
    <string name="bands">Bands</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="tune2">Tune</string>
    <string name="ch1">CH1</string>
    <string name="ch2">CH2</string>
    <string name="ch3">CH3</string>
    <string name="ch4">CH4</string>
    <string name="ch5">CH5</string>
    <string name="ch6">CH6</string>
    <string name="spdif_l">Spdif L</string>
    <string name="spdif_r">Spdif R</string>
    <string name="streaming_l">Streaming L</string>
    <string name="streaming_r">Streaming R</string>
    <string name="mic1">Mic 1</string>
    <string name="mic2">Mic 2</string>
    <string name="before_in_eq">Before In EQ</string>
    <string name="after_in_eq">After In EQ</string>
    <string name="connected">Conntected</string>
    <string name="not_connected">Not Connected</string>
    <string name="reset_eq">Reset EQ</string>
    <string name="reset">Reset</string>
    <string name="band">Band:</string>
    <string name="ch_eq2">CH EQ</string>
    <string name="in_eq2">IN EQ</string>
    <string name="band2">Band</string>
    <string name="gain">Gain</string>
    <string name="type">Type</string>
    <string name="freq">FREQ</string>
    <string name="q">Q</string>
    <string name="all_pass">All Pass</string>
    <string name="high_pass_filter">High Pass Filter</string>
    <string name="low_pass_filter">Low Pass Filter</string>
    <string name="band_filter">Band Filter</string>
    <string name="filter_type">Filter Type</string>
    <string name="hi_slope">Hi Slope</string>
    <string name="lo_slope">LO Slope</string>
    <string name="hi_freq">Hi FREQ</string>
    <string name="lo_freq">LO FREQ</string>
    <string name="hint_save_settings">Save current settings or not?</string>
    <string name="hint_go_input_setting">Output setup complete，please confirm go to input setting?</string>
    <string name="hint_band_pass">Low pass frequency should be greater than or equal to high pass frequency.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="digital">DIGITAL</string>
    <string name="wait_dialog">Please wait a moment...</string>
    <string name="cancel">Cancel</string>
    <string name="managerpreset_add">Loading current settings or not?</string>
    <string name="managerpreset_up">Up current settings or not?</string>
    <string name="managerpreset_delect">Delete current settings or not?</string>

    <string name="save_button_title">Please select where to save?</string>
    <string name="save_button">Save to</string>
    <string name="save_button_CHLevel">Save to CH Level</string>
    <string name="save_button_CHCrossover">Save to CH Crossover</string>
    <string name="save_button_CHDelay">Save to CH Delay</string>
    <string name="save_button_CHEQ">Save to CH EQ</string>
    <string name="save_button_INEQ">Save to IN EQ</string>

    <string name="crossover_reset">Reset will delete data,Are you sure?</string>
    <string name="eqchannelselect">EQ Channel select</string>
    <string name="connect_title">Please select what you want?</string>
    <string name="connect_btn1">Copy Left to Right?</string>
    <string name="connect_btn2">Copy Right to Left?</string>
    <string name="connect_btn1_up">Copy Up to Down?</string>
    <string name="connect_btn2_down">Copy Down to Up?</string>

    <string name="memory_a">Memory A</string>
    <string name="memory_b">Memory B</string>
    <!-- 授权 -->
    <string name="permission_open">To keep the application running, open permissions</string>
    <string name="permission_location">In order to ensure that the application is running properly, you need to obtain position permissions</string>
    <string name="permission_camera">In order to ensure the application is running properly, you need to obtain camera permissions</string>
    <string name="permission_read">In order to keep the application running properly, you need to get permission to read and write mobile phone storage</string>
    <string name="permission">authorize</string>
    <string name="permission_active">Manual authorization</string>
    <string name="other_cancel">cancel</string>

    <string name="preferences_dac_filter">DAC filter</string>
    <string name="preferences_btn1_text">Sharp Roll-Off Filter</string>
    <string name="preferences_btn2_text">Slop Roll-Off Filter</string>
    <string name="preferences_btn3_text">Short Delay Sharp Roll-Off Filter</string>
    <string name="preferences_btn4_text">Short Delay Slow Roll-Off Filter</string>
    <string name="preferences_led_text">LED colors setup</string>
    <string name="preferences_led_btn1_text">Rmote</string>
    <string name="preferences_led_btn2_text">AMP</string>
    <string name="preferences_reset">Reset</string>
    <string name="preferences_is_reset">Reset current settings or not?</string>

    <string name="preferences_update">Do you want to upgrade Mcu?</string>

    <string name="mcu_update_btn1">WiFi not enabled</string>
    <string name="mcu_update_btn2">Check file</string>
    <string name="mcu_update_btn3">Check version</string>
    <string name="mcu_update_btn4">Download the upgrade file</string>
    <string name="mcu_update_btn5">WiFi not enabled</string>
    <string name="mcu_update_btn6">Upgrading Mcu</string>
    <string name="mcu_update_btn7">Mcu has been upgraded to the latest version</string>
</resources>
